--- a/wedding_website/styles/style.css
+++ b/wedding_website/styles/style.css
@@ -1,11 +1,18 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 /* Default */
 body {
 	margin: 0;
 	line-height: 1.5;
 	font-size: 16px;
+	font-weight: 400;
+	background-color: #f3f2f1;
+}
+
+* :not(i) {
+	font-family: 'Roboto', sans-serif;
 }
 
 * {
@@ -18,7 +25,7 @@ a {
 	text-decoration: none;
 }
 
-:before,:after {
+:before, :after {
 	box-sizing: border-box;
 }
 
@@ -51,6 +58,22 @@ header, section, footer {
 	align-items: center;
 }
 
+.section-title {
+	flex: 0 0 100%;
+	max-width: 100%;
+	padding:0 15px;
+	text-align: center;
+	margin-bottom: 60px;
+}
+
+.section-title h2 {
+	font-size: 45px;
+	color: #000000;
+	font-weight: 200;
+	font-family: 'Fredericka the Great', cursive;
+	letter-spacing: 2px;
+	margin: 0;
+}
 
 
 /* Header */
@@ -72,6 +95,8 @@ header, section, footer {
 	color: #ffffff;
 /*	font-weight: bold;*/
 	font-family: 'Fredericka the Great', cursive;
+	letter-spacing: 2px;
+	text-transform: uppercase;
 }
 
 .header .nav {
@@ -92,6 +117,11 @@ header, section, footer {
 .header .nav ul li a {
 	display: block;
 	padding: 25px 0;
+	color: #ffffff;
+	font-size: 15px;
+	text-transform: uppercase;
+	text-decoration: none;
+	transition: color 0.5s ease;
 }
 
 
@@ -99,21 +129,26 @@ header, section, footer {
 /* Home Section */
 .home-section {
 	min-height: 100vh;
-	background-color: gray;
+	position: relative;
 }
 
 .home-section .slide {
 	background-position: center;
 	background-size: cover;
-	position: relative;
+	position: absolute;
 	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 1s ease-in-out;
 }
 
-.home-section .slide {
-	background-position: center;
-	background-size: cover;
-	position: relative;
-	z-index: 1;
+.home-section .slide.active {
+	opacity: 1;
+	visibility: visible;
 }
 
 .home-section .slide:before {
@@ -124,10 +159,74 @@ header, section, footer {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.7);
+	z-index: -1;
+}
+
+.home-section .row {
+	min-height: 100vh;
+}
+
+.home-section .home-content {
+	flex: 0 0 100%;
+	max-width: 100%;
+	padding: 0 15px;
+	text-align: center;
+}
+
+.home-section .home-content p {
+	font-size: 24px;
+	color: #ffffff;
+	margin: 0 0 15px;
+
+}
+
+.home-section .slide.active .home-content p {
+	opacity: 0;
+	animation: fadeInTop 1s ease forwards;
+}
+
+@keyframes fadeInTop {
+	0% {
+		transform: translateY(-50px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0px);
+	}
+}
+
+.home-section .home-content h1 {
+	font-size: 80px;
+	color: #ffffff;
+	margin: 0;
+	font-weight: normal;
+	font-family: 'Fredericka the Great', cursive;
+}
+
+.home-section .slide.active .home-content h1  {
+	opacity: 0;
+	animation: fadeInTop 1s ease forwards;
+	animation-delay: 0.5s;
+}
+
+.home-section .home-content span {
+	font-size: 20px;
+	display: inline-block;
+	border: 1px solid #ffffff;
+	border-radius: 30px;
+	color: #ffffff;
+	padding: 7px 30px;
+	margin: 15px 0 0;
+}
+
+.home-section .slide.active .home-content span  {
+	opacity: 0;
+	animation: fadeInTop 1s ease forwards;
+	animation-delay: 1s;
 }
 
 
 
-.home-section .row {
-	min-height: 100vh;
+.couple-section {
+	padding: 80px 0 80px;
 }
