--- a/wedding_website/styles/style.css
+++ b/wedding_website/styles/style.css
@@ -67,9 +67,9 @@ header, section, footer {
 }
 
 .section-title h2 {
-	font-size: 45px;
+	font-size: 50px;
 	color: #000000;
-	font-weight: 200;
+	font-weight: 500;
 	font-family: 'Fredericka the Great', cursive;
 	letter-spacing: 2px;
 	margin: 0;
@@ -229,4 +229,41 @@ header, section, footer {
 
 .couple-section {
 	padding: 80px 0 80px;
+}
+
+.couple-section .couple {
+	flex: 0 0 50%;
+	max-width: 50%;
+	padding: 0 60px;
+	text-align: center;
+	position: relative;
+}
+
+.couple-section .couple:nth-child(2):before {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 2px;
+	height: 100%;
+	background-color: #cccccc;
+}
+
+.couple-section .couple img {
+	max-width: 280px;
+	width: 100%;
+	border-radius: 50%;
+	border: 10px solid transparent;
+}
+
+.couple-section .couple h3 {
+	font-size: 40px;
+	margin: 15px 0;
+	font-family: 'Fredericka the Great', cursive;
+	font-weight: normal;
+	letter-spacing: 2px;
+}
+
+.couple-section .couple p {
+
 }
