--- a/wedding_website/styles/skins/red.css
+++ b/wedding_website/styles/skins/red.css
@@ -1,4 +1,5 @@
 /**	Red color style */
+.couple-section .couple i.fa-heart,
 .couple-section .couple h3,
 .header .nav ul li a.active,
 .header .nav ul li a:hover {
