--- a/wedding_website/styles/style.css
+++ b/wedding_website/styles/style.css
@@ -249,6 +249,17 @@ header, section, footer {
 	background-color: #cccccc;
 }
 
+.couple-section .couple i.fa-heart {
+	position: absolute;
+	left: -15px;
+	width: 31px;
+	background-color: #f3f2f1;
+	padding: 5px;
+	text-align: center;
+	font-size: 18px;
+	top: 22%;
+}
+
 .couple-section .couple img {
 	max-width: 280px;
 	width: 100%;
