--- a/wedding_website/styles/skins/red.css
+++ b/wedding_website/styles/skins/red.css
@@ -1,4 +1,6 @@
 /**	Red color style */
+.story-section .story-item i,
+.story-section .story-text h3,
 .couple-section .couple i.fa-heart,
 .couple-section .couple h3,
 .header .nav ul li a.active,
