--- a/wedding_website/styles/style.css
+++ b/wedding_website/styles/style.css
@@ -73,6 +73,7 @@ header, section, footer {
 	font-family: 'Fredericka the Great', cursive;
 	letter-spacing: 2px;
 	margin: 0;
+	text-transform: capitalize;
 }
 
 
@@ -382,4 +383,75 @@ header, section, footer {
 	line-height: 26px;
 	margin: 0;
 	color: #555555;
+}
+
+
+
+/* Event section */
+
+.event-section {
+	padding: 80px 0 80px;
+}
+
+.event-section .section-title h2 {
+	color: #ffffff;
+}
+
+.event-section .event-item {
+	flex: 0 0 33.33%;
+	max-width: 33.33%;
+	padding: 0 15px;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.event-section .event-item-inner {
+	background-color: #ffffff;
+	padding: 60px 45px 60px;
+	text-align: center;
+	box-shadow: 0 0 10px #888888;
+	flex: 0 0 100%;
+	max-width: 100%;
+	position: relative;
+	z-index: 1;
+}
+
+.event-section .event-item-inner:before {
+	content: '';
+	position: absolute;
+	left: 15px;
+	top: 15px;
+	right: 15px;
+	bottom: 15px;
+	border: 5px solid red;
+	z-index: -1;
+}
+
+
+.event-section .event-item-inner h3 {
+	color: #000000;
+	font-weight: 500;
+	font-size: 24px;
+	margin: 0 0 15px;
+	text-transform: capitalize;
+	border-bottom: 2px solid #cccccc;
+	padding-bottom: 5px;
+	display: inline-block;
+}
+
+.event-section .event-item-inner span {
+	display: block;
+	font-weight: 500;
+	font-size: 16px;
+}
+
+.event-section .event-item-inner span.time {
+	margin-bottom: 15px;
+}
+
+.event-section .event-item-inner p {
+	font-size: 16px;
+	line-height: 26px;
+	color: #555555;
+	margin: 0;
 }
