--- a/wedding_website/styles/style.css
+++ b/wedding_website/styles/style.css
@@ -54,6 +54,10 @@ header, section, footer {
 	justify-content: space-between;
 }
 
+.justify-content-center {
+	justify-content: center;
+}
+
 .align-items-center {
 	align-items: center;
 }
@@ -390,7 +394,7 @@ header, section, footer {
 /* Event section */
 
 .event-section {
-	padding: 80px 0 80px;
+	padding: 80px 0 130px;
 }
 
 .event-section .section-title h2 {
@@ -405,9 +409,13 @@ header, section, footer {
 	flex-wrap: wrap;
 }
 
+.event-section .event-item:nth-child(2) {
+	transform: translateY(50px);
+}
+
 .event-section .event-item-inner {
 	background-color: #ffffff;
-	padding: 60px 45px 60px;
+	padding: 60px 45px 100px;
 	text-align: center;
 	box-shadow: 0 0 10px #888888;
 	flex: 0 0 100%;
@@ -423,7 +431,7 @@ header, section, footer {
 	top: 15px;
 	right: 15px;
 	bottom: 15px;
-	border: 5px solid red;
+	border: 5px solid transparent;
 	z-index: -1;
 }
 
@@ -454,4 +462,18 @@ header, section, footer {
 	line-height: 26px;
 	color: #555555;
 	margin: 0;
+}
+
+.event-section .event-item-inner img {
+	position: absolute;
+	width: 40px;
+	left: 50%;
+	bottom: 18px;
+	z-index: -2;
+	color: blue;
+	margin-left: -20px;
+}
+
+svg {
+	color: white;
 }
