--- a/wedding_website/styles/style.css
+++ b/wedding_website/styles/style.css
@@ -315,6 +315,7 @@ header, section, footer {
 	max-width: 100%;
 	margin-bottom: 50px;
 	position: relative;
+	align-items: center; /* Personal addition */
 }
 
 .story-section .story-item:last-child {
@@ -474,6 +475,73 @@ header, section, footer {
 	margin-left: -20px;
 }
 
-svg {
-	color: white;
+/* People Section */
+
+.people-section {
+	padding: 80px 0 80px;
 }
+
+.people-section .people-filter {
+	padding: 0 15px;
+	flex: 0 0 100%;
+	max-width: 100%;
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.people-section .filter-btn {
+	background-color: #dedede;
+	color: #555555;
+	padding: 7px 15px;
+	display: inline-block;
+	margin: 0 3px;
+	font-size: 16px;
+	text-decoration: none;
+	margin-bottom: 10px;
+}
+
+.people-section .filter-btn.active {
+	color: #ffffff;
+}
+
+.people-section .people-item {
+	flex: 0 0 33.33%;
+	max-width: 33.33%;
+	padding: 15px;
+	margin-top: 25px;
+	display: none;
+}
+
+.people-section .people-item-inner {
+	background-color: #ffffff;
+	padding: 15px;
+	text-align: center;
+}
+
+.people-section .people-item-inner img {
+	width: 100%;
+	box-shadow: 0 0 10px #cccccc;
+	margin-top: -40px;
+	transition: all 0.5s ease;
+}
+
+.people-section .people-item-inner:hover img {
+	transform: scale(0.95);
+}
+
+.people-section .people-item-inner h4 {
+	font-size: 16px;
+	color: #000000;
+	font-weight: 500;
+	margin: 20px 0 5px;
+	text-transform: capitalize;
+}
+
+.people-section .people-item-inner p {
+	color: #555555;
+	font-size: 16px;
+	margin: 0 0 10px;
+	text-transform: capitalize;
+}
+
+.people-section .people-item-inner 
