--- a/wedding_website/styles/style.css
+++ b/wedding_website/styles/style.css
@@ -478,7 +478,7 @@ header, section, footer {
 /* People Section */
 
 .people-section {
-	padding: 80px 0 80px;
+	padding: 80px 0 0;
 }
 
 .people-section .people-filter {
@@ -544,4 +544,86 @@ header, section, footer {
 	text-transform: capitalize;
 }
 
-.people-section .people-item-inner 
+/* Gallery section */
+
+.gallery-section {
+	padding: 80px 0 80px;
+
+}
+
+.gallery-section .gallery-item {
+	flex: 0 0 33.33%;
+	max-width: 33.33%;
+	padding: 15px;
+}
+
+.gallery-section .gallery-item-inner {
+	overflow: hidden;
+	cursor: pointer;
+}
+
+.gallery-section .gallery-item-inner img {
+	width: 100%;
+	transform: scale(1.1);
+	transition: all 0.5s ease;
+}
+
+.gallery-section .gallery-item-inner:hover img {
+	transform: scale(1.0);
+}
+
+/* Gallery popup */
+
+.gallery-popup {
+	cursor: zoom-out;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1099;
+	background-color: rgba(0, 0, 0, 0.8);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.gallery-popup img {
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	padding: 40px 0;
+}
+
+.gallery-popup .gp-container {
+	position: relative;
+	cursor: auto;
+}
+
+.gallery-popup .gp-counter {
+	display: block;
+	height: 40px;
+	color: #FFFFFF;
+	font-size: 16px;
+	position: absolute;
+	left: 0;
+	top: 0;
+	line-height: 40px;
+	font-weight: bold;
+}
+
+
+.gallery-popup .gp-close {
+	display: block;
+	height: 40px;
+	width: 40px;
+	color: #FFFFFF;
+	font-size: 30px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	text-align: center;
+	line-height: 38px;
+	overflow: hidden;
+	cursor: pointer;
+}
