--- a/wedding_website/styles/style.css
+++ b/wedding_website/styles/style.css
@@ -80,6 +80,26 @@ header, section, footer {
 	text-transform: capitalize;
 }
 
+.btn-1 {
+	padding: 10px 35px;
+	color: #ffffff;
+	font-size: 16px;
+	cursor: pointer;
+	border: 2px solid transparent;
+	text-decoration: none;
+	display: inline-block;
+	transition: all 0.5s ease;
+	font-weight: 500;
+}
+
+.btn-1:focus {
+	outline: none;
+}
+
+.btn-1:hover {
+	background-color: transparent;
+}
+
 
 /* Header */
 .header {
@@ -583,12 +603,17 @@ header, section, footer {
 	height: 100%;
 	z-index: 1099;
 	background-color: rgba(0, 0, 0, 0.8);
-	display: flex;
+/*	display: flex;*/
 	align-items: center;
 	justify-content: center;
+	display: none;
 }
 
-.gallery-popup img {
+.gallery-popup.open {
+	display: flex;
+}
+
+.gallery-popup img.gp-img {
 	width: auto;
 	height: auto;
 	max-width: 100%;
@@ -626,4 +651,163 @@ header, section, footer {
 	line-height: 38px;
 	overflow: hidden;
 	cursor: pointer;
+}
+
+.gallery-popup .gp-controls {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 40px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.gallery-popup .gp-controls .prev,
+.gallery-popup .gp-controls .next {
+	display: inline-block;	
+	margin: 0 10px;
+}
+
+.gallery-popup .gp-controls .prev i,
+.gallery-popup .gp-controls .next i {
+	color: #ffffff;
+	font-size: 20px;
+	height: 30px;
+	width: 30px;
+	text-align: center;
+	line-height: 30px;
+	cursor: pointer;
+	border-radius: 2px;
+	transition: all 0.5s ease;
+}
+
+.gallery-popup .gp-controls .prev:hover i,
+.gallery-popup .gp-controls .next:hover i {
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* rsvp section */
+.rsvp-section {
+	padding: 80px 0 80px;
+}
+
+.rsvp-section .section-title h2 ,
+.rsvp-section .section-title p {
+	color: #FFFFFF;
+}
+
+.rsvp-section .section-title p {
+	margin: 10px 0 0;
+	font-size: 16px;
+	line-height: 26px;
+}
+
+.rsvp-section .rsvp-form {
+	flex: 0 0 100%;
+	max-width: 100%;
+}
+
+.rsvp-section .form {
+	max-width: 600px;
+	background-color: #ffffff;
+	margin: auto;
+	padding: 60px 25px;
+	box-shadow: 0 0 10px #888888;
+}
+
+.rsvp-section .form .input-group {
+	flex: 0 0 100%;
+	max-width: 100%;
+	padding: 0 15px;
+}
+
+.rsvp-section .form .input-group.w50 {
+	flex: 0 0 50%;
+	max-width: 50%;
+}
+
+.rsvp-section .form .input-control {
+	display: block;
+	width: 100%;
+	height: 45px;
+	margin-bottom: 30px;
+	font-size: 16px;
+	color: #000000;
+	padding: 6px 12px;
+	border: 1px solid #cccccc;
+}
+
+.rsvp-section .form textarea.input-control {
+	height: 120px;
+	padding-top: 12px;
+	resize: none;
+}
+
+.rsvp-section .form .input-control:focus {
+	outline: none;
+}
+
+
+/* footer */
+.footer {
+	padding: 120px 0 120px;
+}
+
+.footer .footer-content {
+	flex: 0 0 100%;
+	max-width: 100%;
+	padding: 0 15px;
+}
+
+.footer .footer-content .couple-name {
+	width: 400px;
+	height: 400px;
+	border-radius: 50%;
+	margin: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	z-index: 1;
+}
+
+.footer .footer-content .couple-name img {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+
+}
+
+.footer .footer-content .couple-name h2 {
+	font-size: 40px;
+	font-family: 'Fredericka the Great', cursive;
+	font-weight: normal;
+	color: #000000;
+	margin: 0;
+	text-align: center;
+	text-transform: capitalize;
+	letter-spacing: 2px;
+}
+
+.footer .footer-content .couple-name h2 span {
+	font-family: 'Fredericka the Great', cursive;
+	font-weight: normal;
+	display: block;
+	background-color: #f3f2f1;
+	border-radius: 15%;
+}
+
+.footer .footer-content p {
+	font-size: 40px;
+	font-family: 'Fredericka the Great', cursive;
+	font-weight: normal;
+	color: #000000;
+	margin: 0;
+	text-align: center;
+	letter-spacing: 2px;
 }
