--- a/wedding_website/styles/style.css
+++ b/wedding_website/styles/style.css
@@ -103,12 +103,18 @@ header, section, footer {
 
 /* Header */
 .header {
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	left: 0;
 	top: 0;
 	z-index: 99;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+	transition: all 0.5s ease;
+}
+
+.header.fixed {
+	background-color: #ffffff;
+	box-shadow: 0 0 8px #cccccc;
 }
 
 .header .logo {
@@ -118,10 +124,66 @@ header, section, footer {
 .header .logo a {
 	font-size: 45px;
 	color: #ffffff;
-/*	font-weight: bold;*/
 	font-family: 'Fredericka the Great', cursive;
 	letter-spacing: 2px;
 	text-transform: uppercase;
+	transition: all 0.5s ease;
+}
+
+.header.fixed .logo a {
+	color: #000000;
+}
+
+.header .hamburger-btn {
+	display: inline-block;
+	height: 34px;
+	width: 40px;
+	border: 1px solid #ffffff;
+	border-radius: 3px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: all 0.5s ease;
+	display: none;
+}
+
+.header.fixed .hamburger-btn {
+	border-color: #000000;
+}
+
+.header .hamburger-btn span {
+	display: block;
+	height: 1px;
+	width: 16px;
+	background-color: #ffffff;
+	position: relative;
+	transition: all 0.5s ease;
+}
+
+.header.fixed .hamburger-btn span:before,
+.header.fixed .hamburger-btn span:after,
+.header.fixed .hamburger-btn span {
+	background-color: #000000;
+}
+
+.header .hamburger-btn span:before,
+.header .hamburger-btn span:after {
+	content: '';
+	position: absolute;
+	height: 1px;
+	width: 100%;
+	left: 0;
+	background-color: #ffffff;
+	transition: all 0.5s ease;
+}
+
+.header .hamburger-btn span:before {
+	top: -6px;
+}
+
+.header .hamburger-btn span:after {
+	top: 6px;
 }
 
 .header .nav {
@@ -149,6 +211,9 @@ header, section, footer {
 	transition: color 0.5s ease;
 }
 
+.header.fixed .nav ul li a {
+	color: #555555;
+}
 
 
 /* Home Section */
