--- a/styles/style.css
+++ b/styles/style.css
@@ -263,18 +263,6 @@ header, section, footer {
 	text-align: center;
 }
 
-.home-section .home-content p {
-	font-size: 24px;
-	color: #ffffff;
-	margin: 0 0 15px;
-
-}
-
-.home-section .slide.active .home-content p {
-	opacity: 0;
-	animation: fadeInTop 1s ease forwards;
-}
-
 @keyframes fadeInTop {
 	0% {
 		transform: translateY(-50px);
@@ -300,7 +288,7 @@ header, section, footer {
 }
 
 .home-section .home-content span {
-	font-size: 20px;
+	font-size: 30px;
 	display: inline-block;
 	border: 1px solid #ffffff;
 	border-radius: 30px;
@@ -775,50 +763,27 @@ header, section, footer {
 	line-height: 26px;
 }
 
-.rsvp-section .rsvp-form {
-	flex: 0 0 100%;
-	max-width: 100%;
-	padding: 0 15px;
-}
-
-.rsvp-section .form {
-	max-width: 600px;
-	background-color: #ffffff;
-	margin: auto;
-	padding: 60px 25px;
-	box-shadow: 0 0 10px #888888;
-}
-
-.rsvp-section .form .input-group {
-	flex: 0 0 100%;
-	max-width: 100%;
-	padding: 0 15px;
-}
-
-.rsvp-section .form .input-group.w50 {
-	flex: 0 0 50%;
-	max-width: 50%;
-}
-
-.rsvp-section .form .input-control {
-	display: block;
-	width: 100%;
-	height: 45px;
+.rsvp-section .rsvp-link span {
+	font-size: 20px;
+	display: inline-block;
+	border: 1px solid #ffffff;
+	border-radius: 30px;
+	color: #ffffff;
+	padding: 7px 30px;
+	transition: all 0.5s ease;
+	margin-top: -60px;
 	margin-bottom: 30px;
-	font-size: 16px;
-	color: #000000;
-	padding: 6px 12px;
-	border: 1px solid #cccccc;
+    background-color: #111111;
 }
 
-.rsvp-section .form textarea.input-control {
-	height: 120px;
-	padding-top: 12px;
-	resize: none;
+.rsvp-section .rsvp-link:hover span {
+    background-color: #ffffff;
+    border-color: #111111;
+    color: #111111;
 }
 
-.rsvp-section .form .input-control:focus {
-	outline: none;
+.rsvp-section .rsvp-img {
+	padding: 0 15px;
 }
 
 /* gift registry */
